--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
@@ -13,14 +13,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  @media(prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: dark) {
     color: rgba(255, 255, 255, 0.87);
     background-color: #121212;
   }
-  @media(prefers-color-scheme: light) {
+  @media (prefers-color-scheme: light) {
     color: rgba(0, 0, 0, 0.87);
     background-color: #ffffff;
-    
   }
 }
 
@@ -33,7 +32,7 @@ a:hover {
   color: #535bf2;
 }
 
-#root{
+#root {
   display: flex;
   justify-content: center;
   align-items: center;
